<resources>
    <string name="app_name">Dev_MyScheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Lates</string>
    <string name="nav_header_subtitle">codrin.lates@stud.ubbcluj.ro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Schedule</string>
    <string name="menu_slideshow">Grades</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_credentials">Credentials</string>
    <string name="menu_rooms">Rooms</string>
    <string name="article_image">Image</string>
    <string name="empty_schedule_message">No data</string>
    <string name="select_group">No data</string>
    <string name="empty_schedule_icon">No data</string>
</resources>