<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home" />


    </group>

    <group android:checkableBehavior="single" android:id="@+id/schedule">


        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_schedule_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/outline_home_work_24"
            android:title="@string/menu_rooms" />





    </group>

    <group android:checkableBehavior="single" android:id="@+id/settings">

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_slideshow" />


        <item
            android:id="@+id/nav_credentials"
            android:icon="@drawable/outline_lock_24"
            android:title="@string/menu_credentials" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/outline_privacy_tip_24"
            android:title="@string/menu_privacy_policy" />
    </group>
</menu>
