<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dev_myscheduler.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dev_myscheduler.ui.gallery.ScheduleFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.example.dev_myscheduler.ui.rooms.RoomsFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.dev_myscheduler.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_credentials"
        android:name="com.example.dev_myscheduler.ui.credentials.CredentialsFragment"
        android:label="@string/menu_credentials"
        tools:layout="@layout/fragment_credentials" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.example.dev_myscheduler.ui.privacy_policy.PrivacyFragment"
        android:label="@string/menu_privacy_policy"
        tools:layout="@layout/fragment_privacy" />
</navigation>